Update - Added contact me and find out more buttons. Fixed spacing.

--- a/style.css
+++ b/style.css
@@ -11,32 +11,40 @@ body {
   background-color: #2A2828;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   margin:30px 25px 25px 25px;
   padding: 50px 50px 100px 50px;
   
 }
 
 .box1 {
-  /* background-color: blue; */
-  font-size: 10rem;
+  /* background-color: blue;  */
+  margin: 20px;
 }
 
 .box1 h1 {
-  font-size: 10rem;
+  font-size: 8rem;
 }
 
 .box2 {
-  /* background-color: red; */
+  /* background-color: red;  */
+  margin: 20px;
 }
 .box2 h2 {
-  /* background-color: red; */
-  font-size: 6rem;
+
+  font-size: 4rem;
+  
 }
 
 
 .box3 {
+   /* background-color: green;  */
+   margin: 20px;
+}
+
+.box4 {
   /* background-color: green;  */
+  margin: 20px;
 }
 
 
